TODO: find out why newlevel screen does not appear

--- a/domestika js course/domestika.html
+++ b/domestika js course/domestika.html
@@ -40,6 +40,13 @@
           </div>
         </div>
       </div>
+      <!--level indicator-->
+      <div class="levelcounter">
+          <h4 class="header-title"> Level: </h4>
+          <div class="header-number">
+            <span id="level">01</span>
+        </div>
+      </div>
       </header>
 
 
@@ -56,7 +63,7 @@
           <div class="module"> 
             <h2>Choose your level:</h2>
             <button id="upload">Next Level</button>
-            <button class="replay">Replay Level</button>
+            <button class="replay">Replay</button>
           </div>
       </div>
       <!-- game over screen-->
@@ -86,6 +93,7 @@
       <script src="js/correctIncorrect.js"></script> 
       <script src="js/stopwatch.js"></script> 
       <script src="js/movecounter.js"></script>
+      <script src="js/changeLevels.js"></script>
       <script src="js/FinishGame.js"></script>
       <script  src="js/start.js"></script> 
       
