diff screens solve, levels implement, movecounter improved

--- a/domestika js course/domestika.html
+++ b/domestika js course/domestika.html
@@ -49,7 +49,6 @@
       </div>
       </header>
 
-
     <main>
         
       <div id="GameTable" class="GameTable">
@@ -59,9 +58,9 @@
       </div>
       <!--Levels screen-->
 
-      <div id="levels" class="levels">
+      <div id="levels" class="Levels">
           <div class="module"> 
-            <h2>Choose your level:</h2>
+            <h2>Choose a level:</h2>
             <button id="upload">Next Level</button>
             <button class="replay">Replay</button>
           </div>
@@ -70,12 +69,12 @@
       <div id="gameOver" class="game-over">
           <div class="module">
             <h2>Oh no!</h2>
-            <p>Would you like to try again?</p>
+            <p>You exceeded the maximum number of moves T.T</p>
             <button class="replay">Try again?</button>
           </div>
       </div> 
       <!-- game finished / cleared-->
-      <div id="gameEnd" class="game-end">
+     <div id="gameEnd" class="game-end">
         <div class="module">
           <h2>Congratulations!</h2>
           <p>Would you like to try again?</p>
@@ -93,6 +92,7 @@
       <script src="js/correctIncorrect.js"></script> 
       <script src="js/stopwatch.js"></script> 
       <script src="js/movecounter.js"></script>
+      <script src="js/gameOver.js"></script>
       <script src="js/changeLevels.js"></script>
       <script src="js/FinishGame.js"></script>
       <script  src="js/start.js"></script> 
