--- a/domestika js course/domestika.html
+++ b/domestika js course/domestika.html
@@ -83,8 +83,33 @@
     </div> 
     </main>
       
-      
+      <!--sound effects-->
+      <audio
+      src="SoundEffects/win.mp3"
+      class="sounds"
+      id="sound-success"
+      preload="auto"
+      ></audio>
 
+       <audio
+      src="SoundEffects/lose.mp3"
+      class="sounds"
+      id="sound-error"
+      preload="auto"
+      ></audio>
+
+      <audio
+      src="SoundEffects/cardFlip.mp3"
+      class="sounds"
+      id="sound-flipCard"
+      preload="auto"
+      ></audio> 
+      <audio
+      src="SoundEffects/mixkit-arcade-game-complete.mp3"
+      class="sounds"
+      id="sound-finished"
+      preload="auto"
+      ></audio>
         <!-- scriptsource -->
       <script src="js/globalVariables.js"></script> 
       <script src="js/cardDistribution.js"></script> 
